src/App.css
.App {
  text-align: center;
  background-color: #E5E5E5;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #3cd2f9;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
}

.centered-tabs > nav {
  display: flex;
  flex-direction: row;
  justify-content: center;
}

textarea {
  border: 2px solid;
  padding: 20px; 
  width: 100%;
  resize: both;
  overflow: auto;
}

.search-bar {
  padding-top: 10px;
}

.metriq-navbar {
  background-color: #3cd2f9;
  font-family: 'Arial', monospace;
   color:white;
   font-weight: bold;
}

.metriq-navbar h2 {
  margin: 0 10px;
}

.metriq-navbar h3 {
  margin: 0 50px;
}

.metriq-navbar-button {
  font-weight: bold;
  color: black;
  background-color: white;
}

.metriq-submission-ref-row {
  margin-bottom: 8px;
}

.metriq-submission-ref-row-label {
  text-align: left;
  margin-top: 8px;
}

.navbar-nav {
  border-radius: 16px;
  border: none;
}

.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
  border-radius: 16px;
  border: none;
}

.nav-tabs {
  display: flex;
  flex-direction: row;
  justify-content: center;
}

.navbar-nav .metriq-navbar-text.nav-link {
    padding-top: 0.9rem;
    color:black;
    font-weight: bold;
}

.navbar-nav .metriq-navbar-text.nav-item {
  padding-top: 0.4rem;
  color: black;
  font-weight: bold;
}

.infinite-scroll-component {
  overflow: visible !important;
}

#metriq-main-content {
  min-height: 700px;
  padding-top: 20px;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

form > div.row {
  padding: 5px 0 5px 0;
}

form > .row > label {
  text-align: right;
}

form > span > .row > label {
  text-align: right;
}

.container a {
  color: #007bff;
}

.container a:hover {
  color: #0000EE;
  text-decoration: underline;
}

.form-field-validator {
  display: inline;
  color: red;
  padding-left: 5px;
}

.logo-image {
  display: inline-block;
  width: 140px;
  height: auto;
  max-width: 180px;
  max-height: 180px;
  padding: 12px;
}

.submission {
  border-radius: 16px;
  margin: 6px;
  padding: 8px;
  background-color: #FFFFFF;
}

.submission:hover {
  box-shadow: 0 0 16px rgba(33,33,33,.2); 
}

.delete-button {
  position: relative;
  top: -8px;
}

.submission-button {
  width: 80px;
  height: 38px;
  margin: 4px;
}

.submission-ref-button {
  margin-right: 4px;
}

.submission-heading {
  font-weight: bold;
  padding: 0 8px 8px 8px
}

.submission-heading-only {
  font-weight: bold;
}

.submission-subheading {
  font-size: 80%;
  padding: 0 8px 8px 8px
}

.submission-image {
  display: inline-block;
  vertical-align: -80px;
  width: 120px;
  height: auto;
  max-width: 180px;
  max-height: 180px;
  padding: 8px;
}

.submission-description {
  white-space: pre-line;
  text-align: left;
  font-size: 90%;
  padding: 0 8px 8px 8px
}

.submission-social-row {
  text-align: left;
  padding-left: 10px;
  padding-bottom: 10px;
}

.submission-detail-container {
  text-align: left;
}

.submission-like-count {
  margin-left: 20px;
  position: relative;
  top: -5px;
}

.task-method-item {
  width: 100%;
  text-align: left;
}

.edit-button {
  width: 80px;
  height: 40px;
  margin: 4px;
  font-size: 0.5em;
  display: inline-block;
}

.edit-button-icon {
  color: black;
}

.link {
  color: #007bff;
}

.link:hover {
  color: #0000EE;
  text-decoration: underline;
}

.detail-table {
  font-family: Arial, Helvetica, sans-serif;
  border-collapse: collapse;
  width: 100%;
}

.detail-table td, #customers th {
  border: 1px solid #ddd;
  padding: 12px;
}

.detail-table tr:nth-child(even){background-color: #f2f2f2;}

.detail-table tr:hover {background-color: #ddd;}

.detail-table th {
  padding-top: 12px;
  padding-left: 12px;
  padding-bottom: 12px;
  text-align: left;
  background-color: #34bce4;
  color: white;
}

.container .submission a {
  color: #000000;
  text-decoration: none;
}

.password-visible-checkbox {
  display: inline-block;
}

.form-field-label {
  white-space: nowrap;
}

.metric-chart-label {
  text-align: right;
  font-weight: bold;
  padding-top: 8px;
}

@media(min-width:820px) {
  .sota-chart-message {
    display: none;
  }
}

@media(max-width:819px) {
  .sota-chart {
    display: none;
  }

  .sota-chart-message {
    text-align: center;
  }
}

#sota-chart-mobile-canvas {
  min-height: 300px;
}

/** Simple generic styling */

.text-center {
  text-align: center;
}

.display-linebreak {
  white-space: pre-line;
}

.hide {
  visibility: hidden;
}

.break-all {
  word-wrap: break-word;
}

.max-width {
  max-width: 100%;
}

/** Pure CSS heart icon */

#heart {
  display: inline-block;
  position: relative;
  top: 4px;
  width: 20px;
  height: 18px;
  margin-top: 2px;
}

#heart::before, #heart::after {
  content: "";
  position: absolute;
  top: 0;
  width: 10px;
  height: 16px;
  border-radius: 10px 10px 0 0;
  background: #FFFF00;
}

#heart::before {
  left: 10px;
  transform: rotate(-45deg);
  transform-origin: 0 100%;
}

#heart::after {
  left: 0;
  transform: rotate(45deg);
  transform-origin: 100% 100%;
}

#heart-full {
  display: inline-block;
  margin-top: 2px;
  top: -1px;
  width: 20px;
  height: 20px;
  position: relative;
  transform: rotate(-45deg);
  border: none;
  border-radius: 1px;
  border-top-color: transparent;
  border-right-color: transparent;
  background-color: #3CD2F9;
}

#heart-full::before, #heart-full::after {
  content: '';
  width: 20px;
  height: 20px;
  border-radius: 50%;
  position: absolute;
  border: none;
  border-bottom-color: transparent;
  border-right-color: transparent;
  background-color: #3CD2F9;
}

#heart-full::before {
  top: -10px;
  left: 0;
  transform: rotate(45deg);
}
#heart-full::after {
  top: 0;
  left: 10px;
  transform: rotate(135deg);
}

#heart-empty {
  display: inline-block;
  margin-top: 2px;
  top: -1px;
  width: 20px;
  height: 20px;
  position: relative;
  transform: rotate(-45deg);
  border: 1px solid #3CD2F9;
  border-radius: 1px;
  border-top-color: transparent;
  border-right-color: transparent;
  background-color: transparent;
}

#heart-empty::before, #heart-empty::after {
  content: '';
  width: 20px;
  height: 20px;
  border-radius: 50%;
  position: absolute;
  border: 1px solid #3CD2F9;
  border-bottom-color: transparent;
  border-right-color: transparent;
}

#heart-empty::before {
  top: -10px;
  left: -1px;
  transform: rotate(45deg);
}
#heart-empty::after {
  top: -1px;
  left: 8px;
  transform: rotate(135deg);
}

